--- a/techcora/index.html
+++ b/techcora/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Techcora - Deep Tech Intelligence</title>
-    <link rel="icon" type="image/png" href="/assets/tc-logo.png" />
-    <link rel="apple-touch-icon" href="/assets/tc-logo.png" />
+    <link rel="icon" type="image/png" href="/assets/tech-logo.png" />
+    <link rel="apple-touch-icon" href="/assets/tech-logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
