meta tag and project section aligned correctly

--- a/techcora/index.html
+++ b/techcora/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="ESACzES8hyAdv-8fpkKZGlV_0fKmMqiaAh4emeONnTE" />
     <title>Techcora - Deep Tech Intelligence</title>
     <link rel="icon" type="image/png" href="/assets/tech-logo.png" />
     <link rel="apple-touch-icon" href="/assets/tech-logo.png" />
